--- a/political.html
+++ b/political.html
@@ -189,7 +189,7 @@
     <!-- ═══════════════════════════════════════════
          NAVIGATION — Same as main site
          ═══════════════════════════════════════════ -->
-    <a href="v4.html" class="floating-logo" aria-label="Home">
+    <a href="index.html" class="floating-logo" aria-label="Home">
         <img src="jk-monogram.png" alt="JK">
     </a>
 
@@ -202,7 +202,7 @@
             </svg>
         </button>
         <div class="menu-dropdown" id="menuDropdown" role="menu">
-            <a href="v4.html#work" class="menu-item" role="menuitem">
+            <a href="index.html#work" class="menu-item" role="menuitem">
                 <svg class="menu-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                     stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
                     <rect x="2" y="7" width="20" height="14" rx="2" />
@@ -210,7 +210,7 @@
                 </svg>
                 <span class="menu-item-label">Work</span>
             </a>
-            <a href="v4.html#about" class="menu-item" role="menuitem">
+            <a href="index.html#about" class="menu-item" role="menuitem">
                 <svg class="menu-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                     stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
                     <circle cx="12" cy="8" r="4" />
@@ -219,7 +219,7 @@
                 <span class="menu-item-label">About</span>
             </a>
             <div class="menu-divider"></div>
-            <a href="v4.html#contact" class="menu-item" role="menuitem">
+            <a href="index.html#contact" class="menu-item" role="menuitem">
                 <svg class="menu-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                     stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
@@ -227,7 +227,7 @@
                 </svg>
                 <span class="menu-item-label">Contact</span>
             </a>
-            <a href="v4.html#faq" class="menu-item" role="menuitem">
+            <a href="index.html#faq" class="menu-item" role="menuitem">
                 <svg class="menu-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                     stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
                     <circle cx="12" cy="12" r="10" />
@@ -243,7 +243,7 @@
          HERO
          ═══════════════════════════════════════════ -->
     <section class="political-hero">
-        <a href="v4.html" class="back-link">
+        <a href="index.html" class="back-link">
             <svg viewBox="0 0 24 24">
                 <polyline points="15 18 9 12 15 6" />
             </svg>
@@ -465,9 +465,9 @@
             <a href="mailto:colour8k@mac.com">colour8k@mac.com</a>
         </div>
         <nav class="footer-nav">
-            <a href="v4.html">Home</a>
-            <a href="v4.html#work">Work</a>
-            <a href="v4.html#contact">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="index.html#work">Work</a>
+            <a href="index.html#contact">Contact</a>
         </nav>
         <div class="footer-social">
             <a href="https://www.linkedin.com/in/jeff-kerr-54109839/" target="_blank" aria-label="LinkedIn">
