Update stats: 200+ projects, 5+ industries, 3 countries; remove 'I shoot' from bio

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                         to rapid-response political ads and Danny Trejo's TV show, I bring the same energy to every cut.
                     </p>
                     <p class="about-text reveal">
-                        I edit. I shoot. I animate. I build apps. I code.
+                        I edit. I animate. I build apps. I code.
                         If it tells a story and needs to look great, I'm already interested.
                         <strong>I work fast. I work clean. I don't miss deadlines.</strong>
                     </p>
@@ -305,16 +305,16 @@
                     <div class="stat-label">Years Creating</div>
                 </div>
                 <div class="stat">
-                    <div class="stat-number" data-target="50">0+</div>
+                    <div class="stat-number" data-target="200">0+</div>
                     <div class="stat-label">Projects</div>
                 </div>
                 <div class="stat">
-                    <div class="stat-number" data-target="7">0+</div>
-                    <div class="stat-label">Active Projects</div>
+                    <div class="stat-number" data-target="5">0+</div>
+                    <div class="stat-label">Industries</div>
                 </div>
                 <div class="stat">
-                    <div class="stat-number" data-target="4">0+</div>
-                    <div class="stat-label">Sectors</div>
+                    <div class="stat-number" data-target="3">0+</div>
+                    <div class="stat-label">Countries</div>
                 </div>
             </div>
         </div>
