Add playground page (coming soon) + link under FAQ

--- a/index.html
+++ b/index.html
@@ -411,6 +411,21 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Playground Link -->
+            <div class="playground-link reveal" style="text-align: center; margin-top: 48px;">
+                <a href="playground.html"
+                    style="display: inline-flex; align-items: center; gap: 10px; font-family: 'Inter', sans-serif; font-size: 13px; letter-spacing: 2px; text-transform: uppercase; color: rgba(255,255,255,0.4); text-decoration: none; transition: color 0.3s ease; padding: 12px 24px; border: 1px solid rgba(255,255,255,0.1); border-radius: 6px;"
+                    onmouseover="this.style.color='#e85533'; this.style.borderColor='rgba(232,85,51,0.3)'"
+                    onmouseout="this.style.color='rgba(255,255,255,0.4)'; this.style.borderColor='rgba(255,255,255,0.1)'">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <polygon
+                            points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26" />
+                    </svg>
+                    Playground
+                </a>
+            </div>
     </section>
 
     <!-- ═══════════════════════════════════════════
