Fix playground: raise back link, add spacing, center it

--- a/playground.html
+++ b/playground.html
@@ -106,6 +106,7 @@
         .coming-soon .back-link {
             display: inline-flex;
             align-items: center;
+            justify-content: center;
             gap: 8px;
             font-family: var(--font-body);
             font-size: 13px;
@@ -114,8 +115,9 @@
             color: var(--text-muted);
             text-decoration: none;
             transition: color 0.3s ease;
+            margin-bottom: 48px;
             opacity: 0;
-            animation: fadeUp 0.8s ease forwards 0.8s;
+            animation: fadeUp 0.8s ease forwards 0.2s;
         }
 
         .coming-soon .back-link:hover {
