--- a/playground.html
+++ b/playground.html
@@ -103,10 +103,13 @@
             animation: fadeUp 0.8s ease forwards 0.6s;
         }
 
-        .coming-soon .back-link {
+        .back-link {
+            position: fixed;
+            top: 28px;
+            right: 32px;
+            z-index: 100;
             display: inline-flex;
             align-items: center;
-            justify-content: center;
             gap: 8px;
             font-family: var(--font-body);
             font-size: 13px;
@@ -115,16 +118,15 @@
             color: var(--text-muted);
             text-decoration: none;
             transition: color 0.3s ease;
-            margin-bottom: 48px;
             opacity: 0;
-            animation: fadeUp 0.8s ease forwards 0.2s;
+            animation: fadeUp 0.8s ease forwards 0.1s;
         }
 
-        .coming-soon .back-link:hover {
+        .back-link:hover {
             color: var(--accent);
         }
 
-        .coming-soon .back-link svg {
+        .back-link svg {
             width: 16px;
             height: 16px;
             stroke: currentColor;
@@ -196,19 +198,20 @@
         <img src="jk-monogram.png" alt="JK">
     </a>
 
+    <a href="index.html" class="back-link">
+        <svg viewBox="0 0 24 24">
+            <polyline points="15 18 9 12 15 6" />
+        </svg>
+        Main Site
+    </a>
+
     <div class="coming-soon">
-        <a href="index.html" class="back-link">
-            <svg viewBox="0 0 24 24">
-                <polyline points="15 18 9 12 15 6" />
-            </svg>
-            Back to Main Site
-        </a>
         <div class="label">Playground</div>
-        <h1><span>Coming<br>Soon</span></h1>
+        <h1><span>Still<br>Rendering</span></h1>
         <div class="accent-line"></div>
         <p class="sub">
-            Experiments, prototypes, and creative tools.
-            Something interesting is brewing.
+            Experiments, prototypes, and creative tools.<br>
+            Check back — this page has a deadline too.
         </p>
     </div>
 
