Add Banco Azteca project, update descriptions, fix YouTube embed

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <section class="work" id="work">
         <div class="work-header reveal">
             <h2>Selected Work</h2>
-            <span class="work-count">07 Projects</span>
+            <span class="work-count">08 Projects</span>
         </div>
 
         <!-- 01 — Showreel -->
@@ -203,9 +203,27 @@
             </div>
         </div>
 
-        <!-- 04 — CRN -->
+        <!-- 04 — Banco Azteca -->
         <div class="project reveal">
             <div class="project-number">04</div>
+            <div class="project-media">
+                <img src="Videos/Reel_Poster.jpg" alt="Banco Azteca Banking Explainer">
+                <div class="project-play">
+                    <svg viewBox="0 0 24 24">
+                        <polygon points="8,5 20,12 8,19" />
+                    </svg>
+                </div>
+            </div>
+            <div class="project-info">
+                <div class="project-title">Banco<br>Azteca</div>
+                <div class="project-meta">Banco Azteca · Explainer</div>
+                <div class="project-role">Director / Animator</div>
+            </div>
+        </div>
+
+        <!-- 05 — CRN -->
+        <div class="project reveal">
+            <div class="project-number">05</div>
             <div class="project-media">
                 <img src="Videos/CRNPOSTER.jpg" alt="Council for Responsible Nutrition">
                 <video src="Videos/CRNQuickLoop.mp4" muted loop playsinline></video>
@@ -222,9 +240,9 @@
             </div>
         </div>
 
-        <!-- 05 — FTC -->
+        <!-- 06 — FTC -->
         <div class="project reveal">
-            <div class="project-number">05</div>
+            <div class="project-number">06</div>
             <div class="project-media">
                 <img src="Videos/FTCLEANPoster.jpg" alt="FTC — LeanSpa">
                 <video src="Videos/FTCLEANQuickLoop.mp4" muted loop playsinline></video>
@@ -241,9 +259,9 @@
             </div>
         </div>
 
-        <!-- 06 — Justice -->
+        <!-- 07 — Justice -->
         <div class="project reveal">
-            <div class="project-number">06</div>
+            <div class="project-number">07</div>
             <div class="project-media">
                 <img src="Videos/JusticePoster.jpg" alt="Justice for Lai Dai Han">
                 <video src="Videos/JusticeLoop.mp4" muted loop playsinline></video>
@@ -260,9 +278,9 @@
             </div>
         </div>
 
-        <!-- 07 — NASA -->
+        <!-- 08 — NASA -->
         <div class="project reveal">
-            <div class="project-number">07</div>
+            <div class="project-number">08</div>
             <div class="project-media">
                 <img src="Videos/NASAPoster.jpg" alt="Apollo 11 — 50th Anniversary">
                 <video src="Videos/NASAQuickLoop.mp4" muted loop playsinline></video>
