Add political portfolio section + consolidate video assets
- Added site-political/ with full political portfolio (index.html, political.html, main.js, styles.css)
- Updated site-political video paths to reference shared ../Videos/ (removed duplicate ~60MB)
- Updated .gitignore to exclude dev-only playground/cat files
- Root site updated with latest styling and animation improvements

--- a/site-political/political.html
+++ b/site-political/political.html
@@ -270,7 +270,7 @@
     <section class="political-work">
         <div class="work-header reveal">
             <h2>Selected Work</h2>
-            <span class="work-count">09 Projects</span>
+            <span class="work-count">10 Projects</span>
         </div>
 
         <div class="filter-tabs reveal">
@@ -352,45 +352,9 @@
             </div>
         </div>
 
-        <!-- 05 — Hamlin -->
-        <div class="project reveal" data-project="4" data-category="legal">
+        <!-- 05 — Chickasha -->
+        <div class="project reveal" data-project="4" data-category="political">
             <div class="project-number">05</div>
-            <div class="project-media">
-                <img src="https://img.youtube.com/vi/IfL5xvKUvdE/maxresdefault.jpg" alt="Hamlin Edit">
-                <div class="project-play">
-                    <svg viewBox="0 0 24 24">
-                        <polygon points="8,5 20,12 8,19" />
-                    </svg>
-                </div>
-            </div>
-            <div class="project-info">
-                <div class="project-title">Hamlin</div>
-                <div class="project-meta">Legal</div>
-                <div class="project-role">Editor</div>
-            </div>
-        </div>
-
-        <!-- 06 — Chatfield Smith -->
-        <div class="project reveal" data-project="5" data-category="legal">
-            <div class="project-number">06</div>
-            <div class="project-media">
-                <img src="https://img.youtube.com/vi/YzIiSskJOrs/maxresdefault.jpg" alt="Chatfield Smith Edit">
-                <div class="project-play">
-                    <svg viewBox="0 0 24 24">
-                        <polygon points="8,5 20,12 8,19" />
-                    </svg>
-                </div>
-            </div>
-            <div class="project-info">
-                <div class="project-title">Chatfield<br>Smith</div>
-                <div class="project-meta">Legal</div>
-                <div class="project-role">Editor</div>
-            </div>
-        </div>
-
-        <!-- 07 — Chickasha -->
-        <div class="project reveal" data-project="6" data-category="political">
-            <div class="project-number">07</div>
             <div class="project-media">
                 <img src="https://img.youtube.com/vi/73L1JUTXlg8/maxresdefault.jpg" alt="Chickasha Murder :60">
                 <div class="project-play">
@@ -406,9 +370,63 @@
             </div>
         </div>
 
-        <!-- 08 — Banco Austin -->
-        <div class="project reveal" data-project="7" data-category="government">
+        <!-- 06 — McConaughey Lobbying -->
+        <div class="project reveal" data-project="5" data-category="political">
+            <div class="project-number">06</div>
+            <div class="project-media">
+                <img src="https://img.youtube.com/vi/s2OI_a9mOBM/maxresdefault.jpg" alt="McConaughey Lobbying">
+                <div class="project-play">
+                    <svg viewBox="0 0 24 24">
+                        <polygon points="8,5 20,12 8,19" />
+                    </svg>
+                </div>
+            </div>
+            <div class="project-info">
+                <div class="project-title">McConaughey<br>Lobbying</div>
+                <div class="project-meta">Political</div>
+                <div class="project-role">Editor</div>
+            </div>
+        </div>
+
+        <!-- 07 — Legal Proceedings I -->
+        <div class="project reveal" data-project="6" data-category="legal">
+            <div class="project-number">07</div>
+            <div class="project-media">
+                <img src="https://img.youtube.com/vi/IfL5xvKUvdE/maxresdefault.jpg" alt="Legal Proceedings">
+                <div class="project-play">
+                    <svg viewBox="0 0 24 24">
+                        <polygon points="8,5 20,12 8,19" />
+                    </svg>
+                </div>
+            </div>
+            <div class="project-info">
+                <div class="project-title">Legal<br>Proceedings — I</div>
+                <div class="project-meta">Legal</div>
+                <div class="project-role">Editor</div>
+            </div>
+        </div>
+
+        <!-- 08 — Legal Proceedings II -->
+        <div class="project reveal" data-project="7" data-category="legal">
             <div class="project-number">08</div>
+            <div class="project-media">
+                <img src="https://img.youtube.com/vi/YzIiSskJOrs/maxresdefault.jpg" alt="Legal Proceedings">
+                <div class="project-play">
+                    <svg viewBox="0 0 24 24">
+                        <polygon points="8,5 20,12 8,19" />
+                    </svg>
+                </div>
+            </div>
+            <div class="project-info">
+                <div class="project-title">Legal<br>Proceedings — II</div>
+                <div class="project-meta">Legal</div>
+                <div class="project-role">Editor</div>
+            </div>
+        </div>
+
+        <!-- 09 — Banco Austin -->
+        <div class="project reveal" data-project="8" data-category="government">
+            <div class="project-number">09</div>
             <div class="project-media">
                 <img src="https://img.youtube.com/vi/UR0bXieWumw/maxresdefault.jpg" alt="Banco Austin">
                 <div class="project-play">
@@ -424,9 +442,9 @@
             </div>
         </div>
 
-        <!-- 09 — AISC -->
-        <div class="project reveal" data-project="8" data-category="government">
-            <div class="project-number">09</div>
+        <!-- 10 — AISC -->
+        <div class="project reveal" data-project="9" data-category="government">
+            <div class="project-number">10</div>
             <div class="project-media">
                 <img src="https://img.youtube.com/vi/Q7wWzs8vnP0/maxresdefault.jpg" alt="AISC American Steel">
                 <div class="project-play">
@@ -475,7 +493,7 @@
          FOOTER
          ═══════════════════════════════════════════ -->
     <footer>
-        <video class="footer-video-bg" src="Videos/REELQuickLoop.mp4" autoplay muted loop playsinline></video>
+        <video class="footer-video-bg" src="../Videos/REELQuickLoop.mp4" autoplay muted loop playsinline></video>
         <div class="footer-brand"><img src="jk-monogram.png" alt="JK" style="height: 48px; width: auto;"></div>
         <div class="footer-divider"></div>
         <div class="footer-contact">
@@ -652,28 +670,6 @@
                 ]
             },
             {
-                title: 'Hamlin',
-                embed: 'youtube',
-                videoId: 'IfL5xvKUvdE',
-                description: 'Legal video for Hamlin. Professional, clear messaging crafted for legal proceedings and client communication.',
-                credits: [
-                    ['Type', 'Legal'],
-                    ['Role', 'Editor'],
-                    ['Format', 'Digital']
-                ]
-            },
-            {
-                title: 'Chatfield Smith',
-                embed: 'youtube',
-                videoId: 'YzIiSskJOrs',
-                description: 'Legal video for Chatfield Smith. Polished production designed to support legal communications and presentations.',
-                credits: [
-                    ['Type', 'Legal'],
-                    ['Role', 'Editor'],
-                    ['Format', 'Digital']
-                ]
-            },
-            {
                 title: 'Chickasha Murder',
                 embed: 'youtube',
                 videoId: '73L1JUTXlg8',
@@ -682,6 +678,39 @@
                     ['Type', 'Political Ad'],
                     ['Role', 'Editor'],
                     ['Format', ':60']
+                ]
+            },
+            {
+                title: 'McConaughey Lobbying',
+                embed: 'youtube',
+                videoId: 's2OI_a9mOBM',
+                description: 'Political lobbying and advocacy video. Powerful, persuasive messaging designed for legislative impact and public awareness campaigns.',
+                credits: [
+                    ['Type', 'Political'],
+                    ['Role', 'Editor'],
+                    ['Format', 'Digital']
+                ]
+            },
+            {
+                title: 'Legal Proceedings — I',
+                embed: 'youtube',
+                videoId: 'IfL5xvKUvdE',
+                description: 'Professional legal video production. Clear, compelling messaging crafted for proceedings and formal presentations.',
+                credits: [
+                    ['Type', 'Legal'],
+                    ['Role', 'Editor'],
+                    ['Format', 'Digital']
+                ]
+            },
+            {
+                title: 'Legal Proceedings — II',
+                embed: 'youtube',
+                videoId: 'YzIiSskJOrs',
+                description: 'Polished legal video production. Designed to support formal communications, presentations, and courtroom use.',
+                credits: [
+                    ['Type', 'Legal'],
+                    ['Role', 'Editor'],
+                    ['Format', 'Digital']
                 ]
             },
             {
@@ -723,9 +752,9 @@
 
         function getEmbedUrl(project) {
             if (project.embed === 'youtube') {
-                return `https://www.youtube.com/embed/${project.videoId}?rel=0&modestbranding=1&playsinline=1&enablejsapi=0`;
+                return `https://www.youtube.com/embed/${project.videoId}?rel=0&modestbranding=1&playsinline=1&enablejsapi=0&vq=hd1080`;
             }
-            return `https://player.vimeo.com/video/${project.videoId}?autoplay=0&loop=0&title=0&byline=0&portrait=0`;
+            return `https://player.vimeo.com/video/${project.videoId}?autoplay=0&loop=0&title=0&byline=0&portrait=0&quality=1080p`;
         }
 
         function populateDetail(index) {
