--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Inter:wght@300;400;500&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="jk-monogram.png">
+    <link rel="apple-touch-icon" href="jk-monogram.png">
 </head>
 
 <body>
