--- a/site-political/index.html
+++ b/site-political/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SM9JXHSS81"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7TS282S7NM"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-SM9JXHSS81');
+        gtag('config', 'G-7TS282S7NM');
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
