Add full SEO: sitemap, robots.txt, Open Graph, Twitter Cards, JSON-LD, canonical URLs

--- a/site-political/index.html
+++ b/site-political/index.html
@@ -12,9 +12,38 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeff Kerr — Director & Creative Producer</title>
+    <title>Jeff Kerr — Legal & Political Video Production</title>
     <meta name="description"
-        content="Jeff Kerr — Director & Creative Producer. Entertainment, corporate, government, and political. Grand Rapids, MI.">
+        content="Jeff Kerr — Director specializing in legal, political, and government video production. FTC, DOJ, Congressional campaigns, and advocacy. Grand Rapids, MI.">
+
+    <!-- SEO: Canonical URL -->
+    <link rel="canonical" href="https://www.jefferykerr.com/site-political/index.html">
+
+    <!-- SEO: Open Graph (Facebook, LinkedIn, iMessage previews) -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.jefferykerr.com/site-political/index.html">
+    <meta property="og:title" content="Jeff Kerr — Legal & Political Video Production">
+    <meta property="og:description"
+        content="Director specializing in legal, political, and government video production. FTC, DOJ, Congressional campaigns, and international advocacy.">
+    <meta property="og:image" content="https://www.jefferykerr.com/JeffKerr.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Jeff Kerr">
+    <meta property="og:locale" content="en_US">
+
+    <!-- SEO: Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Jeff Kerr — Legal & Political Video Production">
+    <meta name="twitter:description"
+        content="Director specializing in legal, political, and government video production. FTC, DOJ, Congressional campaigns, and advocacy.">
+    <meta name="twitter:image" content="https://www.jefferykerr.com/JeffKerr.jpg">
+
+    <!-- SEO: Additional meta -->
+    <meta name="author" content="Jeff Kerr">
+    <meta name="keywords"
+        content="Jeff Kerr, political video production, government video, FTC video, DOJ video, congressional campaign video, legal video production, advocacy video, Grand Rapids Michigan">
+    <meta name="robots" content="index, follow">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
