--- a/index.html
+++ b/index.html
@@ -15,6 +15,35 @@
     <title>Jeff Kerr — Director & Creative Producer</title>
     <meta name="description"
         content="Jeff Kerr — Director & Creative Producer. Entertainment, corporate, government, and political. Grand Rapids, MI.">
+
+    <!-- SEO: Canonical URL -->
+    <link rel="canonical" href="https://www.jefferykerr.com/">
+
+    <!-- SEO: Open Graph (Facebook, LinkedIn, iMessage previews) -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.jefferykerr.com/">
+    <meta property="og:title" content="Jeff Kerr — Director & Creative Producer">
+    <meta property="og:description"
+        content="Award-winning director and creative producer specializing in entertainment, corporate, government, and political video production. Based in Grand Rapids, MI.">
+    <meta property="og:image" content="https://www.jefferykerr.com/JeffKerr.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Jeff Kerr">
+    <meta property="og:locale" content="en_US">
+
+    <!-- SEO: Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Jeff Kerr — Director & Creative Producer">
+    <meta name="twitter:description"
+        content="Award-winning director and creative producer. Entertainment, corporate, government, and political. Grand Rapids, MI.">
+    <meta name="twitter:image" content="https://www.jefferykerr.com/JeffKerr.jpg">
+
+    <!-- SEO: Additional meta -->
+    <meta name="author" content="Jeff Kerr">
+    <meta name="keywords"
+        content="Jeff Kerr, director, creative producer, video production, Grand Rapids, Michigan, entertainment, corporate video, political video, government video">
+    <meta name="robots" content="index, follow">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -23,6 +52,27 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="jk-monogram.png">
     <link rel="apple-touch-icon" href="jk-monogram.png">
+
+    <!-- SEO: Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Jeff Kerr",
+        "jobTitle": "Director & Creative Producer",
+        "url": "https://www.jefferykerr.com",
+        "image": "https://www.jefferykerr.com/JeffKerr.jpg",
+        "description": "Award-winning director and creative producer specializing in entertainment, corporate, government, and political video production.",
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Grand Rapids",
+            "addressRegion": "MI",
+            "addressCountry": "US"
+        },
+        "knowsAbout": ["Video Production", "Film Direction", "Creative Production", "Corporate Video", "Political Video", "Government Video", "Entertainment"],
+        "sameAs": []
+    }
+    </script>
 </head>
 
 <body>
