--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
             </svg>
         </button>
         <div class="menu-dropdown" id="menuDropdown" role="menu">
+            <a href="#hero" class="menu-item" role="menuitem">
+                <svg class="menu-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                    stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
+                    <polyline points="9 22 9 12 15 12 15 22" />
+                </svg>
+                <span class="menu-item-label">Home</span>
+            </a>
             <a href="#work" class="menu-item" role="menuitem">
                 <svg class="menu-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                     stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
