--- a/playground-v1/index.html
+++ b/playground-v1/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <!-- Back link -->
-    <a href="../v4.html" class="back-link">
+    <a href="../" class="back-link">
         <svg viewBox="0 0 24 24">
             <line x1="19" y1="12" x2="5" y2="12"></line>
             <polyline points="12 19 5 12 12 5"></polyline>
@@ -27,7 +27,7 @@
 
     <!-- Logo -->
     <div class="floating-logo">
-        <a href="../v4.html"><img src="../jk-monogram.png" alt="JK"></a>
+        <a href="../"><img src="../jk-monogram.png" alt="JK"></a>
     </div>
 
     <!-- Main content -->
