--- a/site-political/index.html
+++ b/site-political/index.html
@@ -200,6 +200,14 @@
             </svg>
         </button>
         <div class="menu-dropdown" id="menuDropdown" role="menu">
+            <a href="/" class="menu-item" role="menuitem">
+                <svg class="menu-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                    stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
+                    <polyline points="9 22 9 12 15 12 15 22" />
+                </svg>
+                <span class="menu-item-label">Home</span>
+            </a>
             <a href="#work" class="menu-item" role="menuitem">
                 <svg class="menu-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                     stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
@@ -215,6 +223,16 @@
                     <path d="M20 21a8 8 0 0 0-16 0" />
                 </svg>
                 <span class="menu-item-label">About</span>
+            </a>
+            <div class="menu-divider"></div>
+            <a href="#political" class="menu-item" role="menuitem">
+                <svg class="menu-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                    stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M12 2L2 7l10 5 10-5-10-5z" />
+                    <path d="M2 17l10 5 10-5" />
+                    <path d="M2 12l10 5 10-5" />
+                </svg>
+                <span class="menu-item-label">Legal, Political & Government</span>
             </a>
             <div class="menu-divider"></div>
             <a href="#contact" class="menu-item" role="menuitem">
@@ -235,14 +253,13 @@
                 <span class="menu-item-label">FAQ</span>
             </a>
             <div class="menu-divider"></div>
-            <a href="#political" class="menu-item" role="menuitem">
+            <a href="/playground.html" class="menu-item" role="menuitem">
                 <svg class="menu-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                     stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M12 2L2 7l10 5 10-5-10-5z" />
-                    <path d="M2 17l10 5 10-5" />
-                    <path d="M2 12l10 5 10-5" />
+                    <polygon
+                        points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26" />
                 </svg>
-                <span class="menu-item-label">Legal, Political & Government</span>
+                <span class="menu-item-label">Playground</span>
             </a>
         </div>
     </div>
